[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/GameOver.gd" type="Script" id=2]
[ext_resource path="res://sounds/game-over.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=2]
size = 140
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.972549, 0.858824, 0.784314, 1 )

[node name="GameOverLabel" type="Label" parent="."]
modulate = Color( 0.847059, 0.117647, 0.117647, 1 )
anchor_left = 0.5
anchor_top = 0.163
anchor_right = 0.5
anchor_bottom = 0.163
margin_left = -427.0
margin_top = -84.3
margin_right = 430.0
margin_bottom = 84.7
custom_fonts/font = SubResource( 2 )
text = "Game Over!"

[node name="FinalScore" type="Label" parent="."]
modulate = Color( 0.270588, 0.223529, 0.223529, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -373.5
margin_top = -90.5
margin_right = 373.5
margin_bottom = 90.5
custom_fonts/font = SubResource( 3 )
text = "Score: "

[node name="FinalScoreValue" type="Label" parent="FinalScore"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -60.5
margin_right = -41.0
margin_bottom = 84.5
custom_fonts/font = SubResource( 4 )
align = 1

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.809
anchor_right = 0.5
anchor_bottom = 0.809
margin_left = -220.0
margin_top = -68.9
margin_right = 206.0
margin_bottom = 69.1
custom_fonts/font = SubResource( 1 )
text = "Restart"

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
